Basic Generation for protoc-gen-nidhi

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -3,5 +3,6 @@ plugins:
   - name: go
     out: .
     opt: paths=source_relative
-  - name: debug
-    out: debug
+  - name: nidhi
+    out: .
+    opt: paths=source_relative
